--- a/samples/Hangfire.Raven.Samples.AspNetCore/Hangfire.Raven.Samples.AspNetCore.csproj
+++ b/samples/Hangfire.Raven.Samples.AspNetCore/Hangfire.Raven.Samples.AspNetCore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net7.0;net6.0;netstandard2.0;</TargetFrameworks>
     <Version>3.2.0</Version>
     <AssemblyVersion>3.2.0.0</AssemblyVersion>
     <FileVersion>3.2.0.0</FileVersion>
