--- a/samples/Hangfire.Raven.Samples.Console/Hangfire.Raven.Samples.Console.csproj
+++ b/samples/Hangfire.Raven.Samples.Console/Hangfire.Raven.Samples.Console.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net7.0;net6.0;netstandard2.0;</TargetFrameworks>
     <Version>3.2.0</Version>
     <AssemblyVersion>3.2.0.0</AssemblyVersion>
     <FileVersion>3.2.0.0</FileVersion>
